--- a/src/input.css
+++ b/src/input.css
@@ -1,10 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* ct */
+.ct-topmenu-expanded {
+  @apply absolute top-10 z-50 w-full bg-white text-center animate-slideDown;
+}
+
 .ct-top-menu-item {
-  @apply cursor-pointer py-1 hover:text-gray-800 relative after:absolute after:bottom-0 after:left-0 after:bg-light-coffee after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out after:duration-300;
+  @apply cursor-pointer py-1 hover:text-gray-800 relative lg:after:absolute lg:after:bottom-0 lg:after:left-0 lg:after:bg-light-coffee lg:after:h-0.5 lg:after:w-0 hover:lg:after:w-full lg:after:transition-all lg:after:ease-in-out lg:after:duration-300;
+}
+
+.ct-top-menu-item-active {
+  @apply text-gray-800 relative cursor-pointer py-1 lg:after:absolute lg:after:bottom-0 lg:after:left-0 lg:after:bg-light-coffee lg:after:h-0.5 lg:after:w-full;
 }
 
 .ct-icon {
