--- a/src/input.css
+++ b/src/input.css
@@ -9,11 +9,11 @@
 }
 
 .ct-top-menu-item {
-  @apply cursor-pointer py-1 hover:text-gray-800 relative lg:after:absolute lg:after:bottom-0 lg:after:left-0 lg:after:bg-light-coffee lg:after:h-0.5 lg:after:w-0 hover:lg:after:w-full lg:after:transition-all lg:after:ease-in-out lg:after:duration-300;
+  @apply cursor-pointer py-1 hover:text-gray-800 relative lg:after:absolute lg:after:bottom-0 lg:after:left-0 lg:after:bg-coffee-200 lg:after:h-0.5 lg:after:w-0 hover:lg:after:w-full lg:after:transition-all lg:after:ease-in-out lg:after:duration-300;
 }
 
 .ct-top-menu-item-active {
-  @apply text-gray-800 relative cursor-pointer py-1 lg:after:absolute lg:after:bottom-0 lg:after:left-0 lg:after:bg-light-coffee lg:after:h-0.5 lg:after:w-full;
+  @apply text-gray-800 relative cursor-pointer py-1 lg:after:absolute lg:after:bottom-0 lg:after:left-0 lg:after:bg-coffee-200 lg:after:h-0.5 lg:after:w-full;
 }
 
 .ct-icon {
@@ -23,3 +23,64 @@
 .ct-badge-circle {
   @apply text-xs text-center rounded-full px-1.5;
 }
+
+.ct-subheadline {
+  @apply flex justify-center items-center my-16;
+}
+
+.ct-subheadline-deco-line {
+  @apply w-8 h-px bg-gray-200;
+}
+
+.ct-subheadline-label {
+  @apply uppercase mx-4 tracking-widest text-gray-500 font-medium text-xs text-center;
+}
+
+.ct-button {
+  @apply text-center uppercase tracking-wider py-4 px-8 text-sm font-semibold cursor-pointer hover:bg-opacity-95;
+}
+
+#root {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  /* ... */
+  perspective: 2px;
+}
+.ct-parallax,
+.ct-no-parallax {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  flex-direction: column;
+}
+.ct-parallax {
+  height: 40vh;
+}
+.ct-no-parallax {
+  height: auto;
+  z-index: 999;
+  background: white;
+}
+.ct-parallax-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* ... */
+  z-index: -1;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+/* @media screen(xl) {
+  .ct-parallax {
+    height: 70vh;
+    transform-style: preserve-3d;
+  }
+  
+  .ct-parallax-image {
+    transform: translateZ(-1px) scale(1.5);
+  }
+} */
